# sphinx-lua-ls

./: pyproject.toml
sphinx_lua_ls/: domain.py
